# spch

./: .gitignore  .rsyncignore  README.md  hello.py  pyproject.toml  rsync.sh  setup.py  test-clean.yaml
scripts/conf/: README
scripts/recipes/commonvoice.all/prepare/: ctc_dataset.py
scripts/recipes/ctc.librispeech-clean-100.en/: prepare  train.wav2vec2.sh
scripts/recipes/ctc.librispeech-clean-100.en/conf/: librispeech-ctc.yaml
scripts/recipes/ksponspeech.all/prepare/: convert.py  seq_whisper_dataset.py
scripts/recipes/librispeech.all/data/: dev-clean-dummy.yaml  dev-clean.yaml
scripts/recipes/librispeech.all/prepare/: README.md  librispeech_prepare.py  (+1 more)
scripts/recipes/seq.qwen.audio.stop.en/: convert_data.py  inference.py  inference_batch.py
scripts/recipes/seq.whisper.ksponspeech.ko/: data  prepare  train.whisper-large-v3-turbo.sh  train.whisper-tiny.sh
scripts/recipes/seq.whisper.librispeech-clean-100.en/: prepare  train.whisper-large-v3-turbo.sh  train.whisper-tiny.sh
scripts/recipes/seq.whisper.librospeech-clean-100.en/: data
scripts/recipes/seq.whisper.stop.en/: ex  infer-whisper-large-v3-turbo.sh  inference.py  train.whisper-large-v3-turbo.sh
scripts/slurm/: bookcover.sbatch
src/dataset/: dataset.py
src/eval/: eval.seq2seq.whisper-tiny.sh  eval_ctc.py  eval_seq2seq2_test.py  eval_seq2seq_single.py  eval_seq2seq_test.py
src/train/: train_ctc.py  train_seq2seq.py
test/: 100_librispeech-dev-clean.txt  audio.py  bookcover.sbatch  compute_output.py  finetune.sh  requirements.txt  train_seq2seq.py
test/script/: train.py
test/src/: aaa.py
(+28 files in other folders)
