[project]
name = "spch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "jiwer>=3.0.5",
    "mlflow>=2.19.0",
    "omegaconf>=2.3.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]
