[project]
name = "spch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.2.1",
    "datasets>=1.18.0",
    "evaluate>=0.4.3",
    "hydra-core>=1.3.2",
    "jiwer>=3.0.5",
    "librosa>=0.10.2.post1",
    "mlflow>=2.19.0",
    "numba>=0.60.0",
    "numpy>=1.24.0",
    "omegaconf>=2.3.0",
    "pynvml>=12.0.0",
    "soundfile>=0.13.0",
    "torch>=1.5",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.47.1",
]
